# math-prompting-eval

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
notes/: 01_dataset_observations.md
tests/: test_extraction.py
