[project]
name = "math-prompting-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "antlr4-python3-runtime==4.11",
    "datasets>=4.8.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "ollama>=0.6.2",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mpe"]